Issue #2394 "River Forecast Points" Functionality to access IHFS DB
Change-Id: I1881f4707cf7256658873a276ea8a8f5f681889c